--- a/studentPage.html
+++ b/studentPage.html
@@ -3,14 +3,13 @@
   <head>
     <title>Student Page</title>
     <link rel="stylesheet" href="maincss.css">
+    <script src="mainjavascript.js"></script>
   </head>
-
-  <div id="picture-frame" ontouchstart="touchStart(event,'picture-frame');"
-   ontouchend="touchEnd(event);" ontouchmove="touchMove(event);"
-   ontouchcancel="touchCancel(event);">
     <body>
-      <script src = "swipe.js"></script>
-      <script src="mainjavascript.js"></script>
+      <!-- <script src = "swipe.js"></script> -->
+      <div id="swipeBox" ontouchstart="touchStart(event,'swipeBox');"
+       ontouchend="touchEnd(event);" ontouchmove="touchMove(event);"
+       ontouchcancel="touchCancel(event);">
 
       <h1 id = "titleText">Job Title</h1>
 
@@ -24,6 +23,6 @@
       <button id = "backBtn" class = "button" type="button" onClick="location.href='index.html'">Back</button>
       <button id = "applyBtn" class = "button" type ="button" onClick="linkToApplication()">Apply</button>
       <button id = "rejectBtn" class = "button" type ="button" onClick="nextListing()">Reject</button>
-    </body>
   </div>
+    </body>
 </html>
